update on about section

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                     </p>
                     <div class="Socials">
                       
-                <div class="icon"><a href=https://www.instagram.com/_k.ev.o?igsh> <i class="uil uil-instagram"></i></a></div>
+                <div class="icon"><a href=https://www.instagram.com/muthamikev?igsh=MTdvdWcyMjBuMDVxcQ==> <i class="uil uil-instagram"></i></a></div>
                 <div class="icon"><a href= https://www.linkedin.com/in/kevin-muthami-052a4a216><i class="uil uil-linkedin-alt"></i></a></div>
                 <div class="icon"><a href=https://github.com/MuthamiKN><i class="uil uil-github-alt"></i></a></div>
            
@@ -374,7 +374,7 @@
                 </ul>
             </div>
             <div class="footer-social-icons">
-                <div class="icon"><a href=https://www.instagram.com/_k.ev.o?igsh> <i class="uil uil-instagram"></i></a></div>
+                <div class="icon"><a href=https://www.instagram.com/muthamikev?igsh=MTdvdWcyMjBuMDVxcQ==> <i class="uil uil-instagram"></i></a></div>
                 <div class="icon"><a href= https://www.linkedin.com/in/kevin-muthami-052a4a216><i class="uil uil-linkedin-alt"></i></a></div>
                 <div class="icon"><a href=https://github.com/MuthamiKN><i class="uil uil-github-alt"></i></a></div>
             </div>
